--- a/Solving_The_System_of_Linear_Equations_Using_SymPy.ipynb
+++ b/Solving_The_System_of_Linear_Equations_Using_SymPy.ipynb
@@ -20,7 +20,7 @@
         "Symbolic computation deals with the computation of mathematical objects symbolically. This means that the mathematical objects are represented exactly, not approximately, and mathematical expressions with unevaluated variables are left in symbolic form.\n",
         "\n",
         "# SymPy Solver Demo\n",
-        "let's create a symbolic variable (`z`), and define an arbitrary equation of $55.9728340445699z^2+32z−28.1086638217203=0$, and solve it symbolically. "
+        "let's create a symbolic variable $z$, and define an arbitrary equation of $55.9728340445699z^2+32z−28.1086638217203=0$, and solve it symbolically. "
       ]
     },
     {
