--- a/Solving_The_System_of_Linear_Equations_Using_SymPy.ipynb
+++ b/Solving_The_System_of_Linear_Equations_Using_SymPy.ipynb
@@ -32,7 +32,7 @@
           "height": 37
         },
         "id": "_ozBY17gLY71",
-        "outputId": "7b6b6370-2cc9-4838-f350-3c633e8a4d53"
+        "outputId": "e7597d06-eca3-42e5-f210-b4ef4a5be4a3"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
           "height": 38
         },
         "id": "IlCWyO3hLY78",
-        "outputId": "6b6378a3-7297-4120-f566-d5453521bd5b"
+        "outputId": "a3ad4f7d-1a2a-4331-c96a-b369b8f7dff6"
       },
       "outputs": [
         {
@@ -107,7 +107,7 @@
           "height": 38
         },
         "id": "zdQL0CKlLY79",
-        "outputId": "d426b998-baf8-4899-daaf-fadd7234245e"
+        "outputId": "ab50a8eb-353e-400f-c632-31e39649f805"
       },
       "outputs": [
         {
@@ -139,7 +139,7 @@
           "height": 37
         },
         "id": "bqJO4r9jLY7-",
-        "outputId": "0db70b5b-20e3-40d2-e6b4-07715b3c82e9"
+        "outputId": "7eb14e01-046e-4f69-f06c-cd8b5ec29832"
       },
       "outputs": [
         {
@@ -194,7 +194,7 @@
           "height": 78
         },
         "id": "8_Ni7zTtmza2",
-        "outputId": "334e4986-8994-4a3a-ace6-c016bac77a4a"
+        "outputId": "0e578fbf-3535-4dae-aef3-da884cbe8be9"
       },
       "execution_count": 5,
       "outputs": [
@@ -227,7 +227,7 @@
           "height": 78
         },
         "id": "0aQsfntinCNQ",
-        "outputId": "6813503d-76c5-4579-a76f-7acb9e3e5173"
+        "outputId": "c29be4c2-1714-4c1c-8b55-21122ff6901b"
       },
       "execution_count": 6,
       "outputs": [
@@ -300,7 +300,7 @@
           "height": 38
         },
         "id": "jKBogiIynQ1B",
-        "outputId": "959740c2-a0b0-4b90-b095-9c88bb53dbf6"
+        "outputId": "57396551-2a34-4c10-dc31-b79e29a39973"
       },
       "execution_count": 7,
       "outputs": [
@@ -333,6 +333,99 @@
       "metadata": {
         "id": "BUer6MUU0r_Q"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Calculating the Inverse Matrix\n",
+        "You can calculate the inverse of matrix using `inv()` method as follows: \n",
+        "## Note:\n",
+        "A square matrix is invertible if and only if the determinant is not equal to zero."
+      ],
+      "metadata": {
+        "id": "EKmuK6I8KE9m"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = sp.Matrix([[1, 2, -4], [2, 6, 8], [0, 1, 8]])\n",
+        "if(A.det()!=0):\n",
+        "  A_inv=A.inv()\n",
+        "else:\n",
+        "  A_inv=[]\n",
+        "  print (\"Non Invertible Matrix: Matrix det == 0; not invertible.\")\n",
+        "A_inv"
+      ],
+      "metadata": {
+        "id": "gyG-VzCDKL_w",
+        "outputId": "45894747-ee0f-4a93-c604-2082591646e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 56
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Non Invertible Matrix: Matrix det == 0; not invertible.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAABAAAAAVCAYAAABPPm7SAAAABHNCSVQICAgIfAhkiAAAAF5JREFUOI1jYKAicGBgYPiPhG8gyYmgyf2HSbBgMeggAwPDAQYGhjdIYt8YGBgaoewEBgYGeXwuaCDg0gPILmAioJggGDVg1IBRAzCBAwOF5cEDBkSeZ2DAXR4MMgAAUJocEs/sZrAAAAAASUVORK5CYII=\n",
+            "text/latex": "$\\displaystyle \\left[ \\right]$",
+            "text/plain": [
+              "[]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = sp.Matrix([[2, 1, 0], [0, 4, -3], [1, -3, 2]])\n",
+        "if(A.det()!=0):\n",
+        "  A_inv=A.inv()\n",
+        "else:\n",
+        "  A_inv=[]\n",
+        "  print (\"Non Invertible Matrix: Matrix det == 0; not invertible.\")\n",
+        "\n",
+        "A_inv"
+      ],
+      "metadata": {
+        "id": "5BpE8u5CKNaY",
+        "outputId": "e2a00d71-d0d2-4992-a473-b36f0a65a172",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 78
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}\\frac{1}{5} & \\frac{2}{5} & \\frac{3}{5}\\\\\\frac{3}{5} & - \\frac{4}{5} & - \\frac{6}{5}\\\\\\frac{4}{5} & - \\frac{7}{5} & - \\frac{8}{5}\\end{matrix}\\right]$",
+            "text/plain": [
+              "⎡1/5  2/5   3/5 ⎤\n",
+              "⎢               ⎥\n",
+              "⎢3/5  -4/5  -6/5⎥\n",
+              "⎢               ⎥\n",
+              "⎣4/5  -7/5  -8/5⎦"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     }
   ],
   "metadata": {
