--- a/9B_Matrix_Diagonalization_and_Large_Power.ipynb
+++ b/9B_Matrix_Diagonalization_and_Large_Power.ipynb
@@ -40,7 +40,7 @@
           "height": 57
         },
         "id": "BBlkRnQiBzNd",
-        "outputId": "3268a6bd-4aeb-4bc0-81d0-c3236768510e"
+        "outputId": "7657edf9-abd7-42d6-898c-ae1eb6e003a6"
       },
       "outputs": [
         {
@@ -63,6 +63,62 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "A.eigenvals()"
+      ],
+      "metadata": {
+        "id": "Cnxsurf118IW",
+        "outputId": "af95540e-ad01-4aa0-cd7e-34ef013497ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{-3: 1, 7: 1}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A.eigenvects()"
+      ],
+      "metadata": {
+        "id": "JQMa8qoi1_4E",
+        "outputId": "8094e4b0-5ecc-414c-f0dd-dfe9924d9027",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(-3, 1, [Matrix([\n",
+              "   [-3/2],\n",
+              "   [   1]])]), (7, 1, [Matrix([\n",
+              "   [1],\n",
+              "   [1]])])]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "hnTZNa8kBzNe"
@@ -80,7 +136,7 @@
           "height": 57
         },
         "id": "Xa-klglBBzNe",
-        "outputId": "31f271c1-7e9c-4df4-e3b6-5c85d387ac06"
+        "outputId": "7d0416be-5ee1-4b68-c7b7-6ff0d0643c20"
       },
       "outputs": [
         {
@@ -104,6 +160,17 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "nUAdUNIE1chy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": 4,
       "metadata": {
         "colab": {
@@ -111,7 +178,7 @@
           "height": 57
         },
         "id": "C3HHGTZ_BzNf",
-        "outputId": "bd61ff4a-ed0b-4166-b50f-151d2904a38b"
+        "outputId": "7b33bdfc-ab3f-4e4d-b0ce-3e2b1a6dc5f1"
       },
       "outputs": [
         {
@@ -142,7 +209,7 @@
           "height": 57
         },
         "id": "ozy8iyLnBzNf",
-        "outputId": "5dfcd9f2-c2a4-4925-bd1a-ff2dc80f0731"
+        "outputId": "1e3de674-0581-4fa4-b194-d427da1e9361"
       },
       "outputs": [
         {
@@ -173,7 +240,7 @@
           "height": 60
         },
         "id": "s6fkWrXDBzNf",
-        "outputId": "0b57454f-17ee-4171-812f-d0a808cfd68f"
+        "outputId": "913e5d09-045a-4245-94f1-b58ceafe0fff"
       },
       "outputs": [
         {
@@ -206,7 +273,7 @@
           "height": 67
         },
         "id": "IIAJlYZQBzNg",
-        "outputId": "f4967a9a-4346-4b87-882a-ea3a52d7dc72"
+        "outputId": "5f011e9c-582e-4a01-dc9c-e485590a4b8c"
       },
       "outputs": [
         {
@@ -239,7 +306,7 @@
           "height": 67
         },
         "id": "bdzkw6C7BzNg",
-        "outputId": "0a6d8440-9dd4-45b3-ef64-3b884ae2de60"
+        "outputId": "11b9f6c4-b47d-407a-e676-b992e620208d"
       },
       "outputs": [
         {
@@ -272,6 +339,62 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "B = sp.Matrix([[319/118,-70/59,-49/118], [-105/59,-243/59,-147/59], [35/118,70/59,403/118]])\n",
+        "B"
+      ],
+      "metadata": {
+        "id": "zRgYkXrzzrv6",
+        "outputId": "6f54bac2-e670-44b5-e70b-4d8e9d004d32",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 78
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Matrix([\n",
+              "[ 2.70338983050847,  -1.1864406779661, -0.415254237288136],\n",
+              "[-1.77966101694915, -4.11864406779661,  -2.49152542372881],\n",
+              "[0.296610169491525,   1.1864406779661,   3.41525423728814]])"
+            ],
+            "text/latex": "$\\displaystyle \\left[\\begin{matrix}2.70338983050847 & -1.1864406779661 & -0.415254237288136\\\\-1.77966101694915 & -4.11864406779661 & -2.49152542372881\\\\0.296610169491525 & 1.1864406779661 & 3.41525423728814\\end{matrix}\\right]$"
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#EigenValue\n",
+        "print(B.eigenvals())\n"
+      ],
+      "metadata": {
+        "id": "MCk7OaCb1QmO",
+        "outputId": "96a5b36b-6c08-4d1d-8612-13b1db678eba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{-4.00000000000000: 1, 3.00000000000000: 1, 3.00000000000000: 1}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 9,
       "metadata": {
         "colab": {
@@ -279,7 +402,7 @@
           "height": 78
         },
         "id": "rk5dP2x5BzNh",
-        "outputId": "8880ebf5-d6c7-4e5e-a34c-3821e556f08e"
+        "outputId": "a5b65160-72e6-437a-f13e-da75e7fbec28"
       },
       "outputs": [
         {
@@ -311,7 +434,7 @@
           "height": 78
         },
         "id": "zzaqUSHyBzNh",
-        "outputId": "808856af-1b34-4048-eb69-6ca61c6808e4"
+        "outputId": "29f0a90c-7c4b-41d4-8d6d-130e6a26b2f3"
       },
       "outputs": [
         {
@@ -343,7 +466,7 @@
           "height": 93
         },
         "id": "hr09pKaCBzNi",
-        "outputId": "09b6b1c6-ba0b-4ca4-844f-c66bff23df48"
+        "outputId": "5042067b-9547-4099-f6e5-562bec4bb277"
       },
       "outputs": [
         {
@@ -376,7 +499,7 @@
           "height": 108
         },
         "id": "LxXNUFK9BzNi",
-        "outputId": "c5670601-7686-4a24-aa8a-b7e7c0f1bb81"
+        "outputId": "8bcd6fa0-422d-4cb1-8f14-8b532d3e27a1"
       },
       "outputs": [
         {
